[TIP-666-extra] Fix double scroll

--- a/src/Pim/Bundle/UIBundle/Resources/public/less/base/general.less
+++ b/src/Pim/Bundle/UIBundle/Resources/public/less/base/general.less
@@ -22,7 +22,7 @@ html {
   font-size: 100%;
   height: 100%;
   margin: 0;
-  padding: 0 ;
+  padding: 0;
 }
 
 body {
@@ -35,6 +35,7 @@ body {
   min-height: 600px;
   margin: 0;
   padding: 0;
+  overflow: hidden;
 
   &.konami:hover {
     cursor: url("/bundles/pimui/images/unicorn-akeneo_43.png"), pointer !important;
